2008-01-26  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (serialize_shorthand, serialize_multiple): The
	leading | ! |s in the priority part were removed (now they
	are added by |css_text| attribute implementation).
	(border-width, border-style, border-color serialize_shorthand): Typo
	fixed.

2008-01-26  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (font serialize_shorthand): Implemented.
	($generic_font_keywords): Typo fixed.

2008-01-26  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Return value of |serialize_multiple| methods
	are changed.
	('margin' serialize_multiple, 'padding' serialize_multiple):
	Implemented.
	('border-style' serialize_shorthand, 'border-color'
	serialize_shorthand, 'border-width' serialize_shorthand,
	'border-left' serialize_shorthand, 'border-top' serialize_shorthand,
	'border-bottom' serialize_shorthand, 'border-right' 
	serialize_shorthand): New.

2008-01-24  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (parse_char_string): Treatement for non-important
	duplicate declarations was incorrect.
	(margin): Use 'margin' shorthand property for serializing 
	margin-related properties if possible.  Support for the |+|
	sign in <'margin'> is added.

2008-01-24  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Support for the |+| sign in 'margin-top' and
	similar properties.

2008-01-22  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm (new {onerror}): The default error handler (outputting
	to the standard error output) is defined.
	(parse_char_string {get_char}): Set the next number to the
	column number of the last character as the column of the
	end of file pseudo-character.

2008-01-20  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm, SelectorsParser.pm: Error type strings are revised.

2008-01-20  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm, SelectorsParser.pm: |{href}| parameter added
	to all the onerror invocations.  The |{onerror}| function
	is no longer called with |{line}| and |{column}| parameters.
