@@ -1,5 +1,9 @@
 2008-01-26  Wakaba  <wakaba@suika.fam.cx>
 
+	* css-visual.dat: New test data for 'border' are added.
+
+2008-01-26  Wakaba  <wakaba@suika.fam.cx>
+
 	* css-1.dat: Some test results were incorrect.
 
 	* css-font.dat: New test data on 'font' are added.
