@@ -1,5 +1,10 @@
 2008-01-26  Wakaba  <wakaba@suika.fam.cx>
 
+	* Parser.pm ('border' serialize_multiple): Reimplement
+	to take 'inherit' and 'important' into account.
+
+2008-01-26  Wakaba  <wakaba@suika.fam.cx>
+
 	* Parser.pm (serialize_shorthand, serialize_multiple): The
 	leading | ! |s in the priority part were removed (now they
 	are added by |css_text| attribute implementation).
